--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                           src="./assets/img/comentarios/m2.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>VVitória Silva</name>
+                          <name>Vitória Silva</name>
                         </font>
                       </td>
                     </tr>
