--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 	  <link rel="stylesheet" href="./assets/css/com.css">
 	
 
+	  <!– Panda Video Velocidade–>
+	  <link rel="preload" href="https://player-vz-9981476d-a0e.tv.pandavideo.com.br/embed/css/styles.css" as="style">
+<link rel="preload" href="https://player-vz-9981476d-a0e.tv.pandavideo.com.br/embed/js/main.bundle.js" as="script">
+<link rel="prerender" href="https://player-vz-9981476d-a0e.tv.pandavideo.com.br/embed/?v=5bda43ba-fb92-4905-85d8-4882ed50a69c">
+<link rel="preload" href="https://player-vz-9981476d-a0e.tv.pandavideo.com.br/embed/js/hls.js" as="script">
+<link rel="preload" href="https://player-vz-9981476d-a0e.tv.pandavideo.com.br/embed/js/plyr.polyfilled.min.js" as="script">
+<link rel="preload" href="https://config.tv.pandavideo.com.br/vz-9981476d-a0e/5bda43ba-fb92-4905-85d8-4882ed50a69c.json" as="fetch">
+<link rel="preload" href="https://config.tv.pandavideo.com.br/vz-9981476d-a0e/config.json" as="fetch">
+<link rel="preload" href="https://b-vz-9981476d-a0e.tv.pandavideo.com.br/5bda43ba-fb92-4905-85d8-4882ed50a69c/playlist.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://b-vz-9981476d-a0e.tv.pandavideo.com.br">
+<link rel="dns-prefetch" href="https://player-vz-9981476d-a0e.tv.pandavideo.com.br">
+<link rel="dns-prefetch" href="https://vz-9981476d-a0e.b-cdn.net">
     
 
     <!-- Título da Página -->
