--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <h3 class="my-4"><b>"Dr. Rodrigo revela Vitamina Caseira de 6 ingredientes que <span style="color:#FFED00;">Elimina completamente os mucos e inflamações da Rinite e Sinusite</span> em 2 semanas" </b></h3>
 			<h4 id="subtitulo">"De forma 100% Natural, sem cirurgias e sem tomar remédios"</h4>
 
-            <!-- VSL -->
-            <script type="text/javascript" id="scr_62465a2934cf0a000a83a188">var s=document.createElement("script");s.src="https://scripts.converteai.net/d803fe73-fac9-462b-ae27-bdc81412510c/players/62465a2934cf0a000a83a188/player.js",s.async=!0,document.head.appendChild(s);</script>
-
-            <!-- Botão 1 -->
+            <!-- VSL Panda Video-->
+           <div style="position:relative;padding-top:56.25%;"><iframe id="panda-5bda43ba-fb92-4905-85d8-4882ed50a69c" src="https://player-vz-9981476d-a0e.tv.pandavideo.com.br/embed/?v=5bda43ba-fb92-4905-85d8-4882ed50a69c" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
+         
+		  <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/BUM1aCo" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO AGORA O PROTOCOLO ELIMINANDO A SINUSITE!</span>
