--- a/index.html
+++ b/index.html
@@ -126,6 +126,41 @@ function getParams() {
 function add(){number+=Math.floor((Math.random()*6)+1);document.getElementById("number").innerHTML=number;setTimeout("add()",10000);}        
 function generate(){number=Math.floor(Math.random()*1143)+1578;document.getElementById("number").innerHTML=number;add();}
 generate();</script>
+	  <script>
+document.addEventListener("contextmenu", function (e){
+    e.preventDefault();
+}, false);
+</script>
+
+<script>
+document.onkeypress = function (event) {
+event = (event || window.event);
+if (event.keyCode == 123) {return false;}
+if (event.keyCode == 93) {return false;}
+if (event.keyCode == 85) {return false;}
+if (event.keyCode == 80) {return false;}
+if (event.keyCode == 44) {return false;}
+if (event.keyCode == 73) {return false;}
+}
+document.onmousedown = function (event) {
+event = (event || window.event);
+if (event.keyCode == 123) {return false;}
+if (event.keyCode == 93) {return false;}
+if (event.keyCode == 85) {return false;}
+if (event.keyCode == 80) {return false;}
+if (event.keyCode == 44) {return false;}
+if (event.keyCode == 73) {return false;}
+}
+document.onkeydown = function (event) {
+event = (event || window.event);
+if (event.keyCode == 123) {return false;}
+if (event.keyCode == 93) {return false;}
+if (event.keyCode == 85) {return false;}
+if (event.keyCode == 80) {return false;}
+if (event.keyCode == 44) {return false;}
+if (event.keyCode == 73) {return false;}
+}
+</script>
 	  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
