--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ src="https://www.facebook.com/tr?id=439002188246929&ev=PageView&noscript=1"
             
 
             <!-- Headline -->
-            <h3 class="my-4"><b>"Dr. Rodrigo revela Vitamina Caseira de 6 ingredientes que <span style="color:#FFED00;">Elimina completamente a Rinite e Sinusite</span> em 2 semanas" </b></h3>
+            <h3 class="my-4"><b>"Médico Otorrino revela <span style="color:#FFED00;">Vitamina Caseira que Elimina Completamente a Sinusite</span> poucos dias..." </b></h3>
 			<h4 id="subtitulo">"De forma 100% Natural, sem cirurgias e sem tomar remédios"</h4>
 
             <!-- VSL Panda Video-->
