--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ src="https://www.facebook.com/tr?id=439002188246929&ev=PageView&noscript=1"
             
 
             <!-- Headline -->
-            <h3 class="my-4"><b>"Médico Otorrino Revela <span style="color:#FFED00;">Vitamina Caseira que Elimina Completamente a Sinusite</span> em poucos dias..." </b></h3>
-			<h4 id="subtitulo">"De forma 100% Natural, sem cirurgias e sem tomar remédios"</h4>
+            <h3 class="my-4"><b>"Otorrino Revela como <span style="color:#FFED00;">Eliminar a Sinusite em menos de 5 dias sem sair de casa</span> com Vitamina Simples de 6 ingredientes..." </b></h3>
 
             <!-- VSL Panda Video-->
            <div style="position:relative;padding-top:56.25%;"><iframe id="panda-5bda43ba-fb92-4905-85d8-4882ed50a69c" src="https://player-vz-9981476d-a0e.tv.pandavideo.com.br/embed/?v=5bda43ba-fb92-4905-85d8-4882ed50a69c" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
