--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ src="https://www.facebook.com/tr?id=439002188246929&ev=PageView&noscript=1"
 		  <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/BUM1aCo" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">SIM, EU QUERO ELIMINAR MINHA SINUSITE!</span>
+                <span class="span-btn">SIM, EU QUERO ACABAR COM A MINHA SINUSITE!</span>
                 
               </a>
             </div>
