--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '817202396091614');
-fbq('track', 'PageView');
+fbq('init', '817202396091614'); <!-- P14 PESSOAL -->
+fbq('init', '786240109190781'); <!-- P15 BM -->
+fbq('track', 'PageView'); 
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=817202396091614&ev=PageView&noscript=1"
